.. SPDX-FileCopyrightText: 2024 The IceTray Contributors
..
.. SPDX-License-Identifier: BSD-2-Clause

.. -*- mode: rst -*- vim: ft=rst

.. _cmake-release-notes:

Release Notes
=============

main
----

June 18, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.11.0

* Move import_all.py out of resources (#3499)
* Ensure that extension modules import cleanly (#3493)
* Run mypy in CI (#3480)
* mypy cleanup for core projects (#3414)
* minimal fixes for boost 1.85.0
* cmake - remove long unused file
* update nlopt detection (#3457)
* docs: install libnlopt-cxx-dev on debian (#3455)
* [cmake] Add SPDX tags (#3439)
* cmake documentation cleanup (#3431)

March 14, 2023 don la dieu (nega at icecube.umd.edu)
----------------------------------------------------
IceTray Release v1.10.0

* fix OpenCL detection with cvmfs
* fix apple linker detection for Xcode 15.3

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* remove non-existent email address
* Delete mailinglist files (#3357)
* Remove all tab characters used for indentation from python files (#3300)
* Update deprecated cmake features
* Add "no lint" guards around our logging macros
* Add "-Wno-maybe-uninitialized" to to our global list of suppressed warnings

Dec. 15, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.1

* bump the new IceTray version number

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)
* add __version__ to icetray (#3303)
* cmake - add dfa127f to tarball-env-shell.sh.in (#3290)
* general python cleanups (ruff/E713) (#3269)
* update macos "step-by-step" docs
* allow quoted arguments to tarbar-env-shell (#3239)
* fix boost detection with parasitic builds (#3230)